mypage header 수정

--- a/src/main/resources/templates/mypage01.mustache
+++ b/src/main/resources/templates/mypage01.mustache
@@ -29,12 +29,12 @@
                         카테고리
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/">카테고리1</a></li>
-                        <li><a class="dropdown-item" href="/">카테고리2</a></li>
+                        <li><a class="dropdown-item" href="/boards/Development">개발 아이디어</a></li>
+                        <li><a class="dropdown-item" href="/boards/Youtube">유튜브 아이디어</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">공지사항</a>
+                    <a class="nav-link" href="/boards/Notice">공지사항</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">고객센터</a>
