좋아요 기능 수정(완), 마이페이지 페이징처리(진행중) 1. BoardController - 좋아요 처리 로직 추가 2. BoardRepository - 페이징처리를 위한 findByUserId 추가 3. BoardService - 페이징처리를 위한 findByUserId 추가 4. CommentRepository, CommentService 페이징 처리하다가 멀티페이징.. 해야될거같아서 포기 5. detail.mustache - 좋아요를 했을 경우 좋아요 취소버튼 보이게끔 수정 6. GoodService - 로직 수정 7. UserController - 마이페이지 페이징처리하다가 문제 식별 * pageable 인터페이스 넘기는건 하난데 게시판 3개를 페이징처리해야됨(멀티페이징 공부필요)

--- a/src/main/resources/templates/detail.mustache
+++ b/src/main/resources/templates/detail.mustache
@@ -21,21 +21,20 @@
             <img src="images" onerror="this.style.display='none';"/>
             {{!이미지가 없을 경우 대체 이미지 숨기기}}
 
-            {{#goods}}
+            {{#good}}
+                <div>
+                <form method="post" action="/boards/like/{{board.id}}">
+                    <input type="submit" value="좋아요취소">
+                </form>
+                </div>
+            {{/good}}
+            {{^good}}
                 <div>
                     <form method="post" action="/boards/like/{{board.id}}">
                         <input type="submit" value="좋아요">
                     </form>
                 </div>
-            {{/goods}}
-            {{^goods}}
-                <div>
-                    <form method="post" action="/boards/like/{{board.id}}">
-                        <input type="submit" value="좋아요 취소">
-                    </form>
-                </div>
-            {{/goods}}
-
+            {{/good}}
             <li class="cnt">좋아요 수</li> <li class="cnt">조회 수 &nbsp;</li> <li style="float: right;"><h6>작성일자 : </h6></li>
 
         </ul>
