--- a/src/main/resources/templates/mypage01.mustache
+++ b/src/main/resources/templates/mypage01.mustache
@@ -85,6 +85,7 @@
                         <th>{{user.id}}</th>
                         <th>{{createdAt}}</th>
                     </tr>
+
                     {{/boardList}}
                     </tbody>
 
@@ -93,17 +94,14 @@
             <!-- 페이징 -->
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{boardprevious}}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
                     <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
+                        <a class="page-link" href="?page={{boardnext}}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
                 </ul>
@@ -146,7 +144,7 @@
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
                     <li class="page-item disabled">
-                        <a class="page-link" href="#" aria-label="Previous">
+                        <a class="page-link" href="?page={{commentprevious}}" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
@@ -154,7 +152,7 @@
                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
                     <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
+                        <a class="page-link" href="?page={{commentnext}}" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
