--- a/src/main/resources/templates/writer.mustache
+++ b/src/main/resources/templates/writer.mustache
@@ -3,7 +3,7 @@
 <br>
 <link rel="stylesheet" href="/css/writer.css">
 <div class="container text-center">
-<form method="post" action="/boards/{{category}}/write/{{userId}}">
+<form method="post" action="/boards/{{category}}/write">
     <table class="table table-striped" style="text-align: center; border: solid 1px #dddddd">
         <thead>
         <tr>
