--- a/src/main/resources/templates/mypage01.mustache
+++ b/src/main/resources/templates/mypage01.mustache
@@ -8,6 +8,9 @@
 <!-- Bootstrap 5.2.3 Version -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
+<!-- Bootstrap Icon -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+
 <script>
     {{#wrongId}}
         alert("다른 유저의 마이페이지에 접근할 수 없습니다.")
@@ -45,10 +48,33 @@
                 <li class="nav-item">
                     <p class="user" style="width: 150px; margin-right: 20px;">{{userLoginId}}님의 마이페이지</p>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                       style="padding: 0px;">
+                        {{#notification}}
+                            <i class="bi bi-bell-fill" style="font-size: x-large;"></i>
+                        {{/notification}}
+                        {{^notification}}
+                            <i class="bi bi-bell" style="font-size: x-large;"></i>
+                        {{/notification}}
+                    </a>
+                    <ul class="dropdown-menu">
+                        {{#notifications}}
+                            <tr>
+                                <td>
+                                    <li><a class="dropdown-item" href="{{notUrl}}?not={{id}}">{{boardId}}번 글에 댓글이 달렸습니다.                                         </a></li>
+                                </td>
+                            </tr>
+                        {{/notifications}}
+                        {{^notifications}}
+                            <li><p class="dropdown-item">새로운 알림이 없습니다.</p></li>
+                        {{/notifications}}
+                    </ul>
+                </li>
+                <li class="nav-item" style="margin-left: 20px; margin-right: 20px">
                     <button class="btn btn-success" onclick="location.href='/users/{{userId}}/edit'">개인정보수정</button>
                 </li>
-                <li class="nav-item" style="margin-left: 20px;">
+                <li class="nav-item">
                     <button class="btn btn-danger" onclick="location.href='/users/logout'">로그아웃</button>
                 </li>
             </ul>
